k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: slash-command-amb
  namespace: slash-command
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: slash-command-amb.manty.co.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: slash-command-amb
                port:
                  number: 80
